--- a/index.html
+++ b/index.html
@@ -6,17 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lateef:wght@400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+
 </head>
-
 <body>
-    <div class="parent">
-        <h2 class="px-size">Hello</h2>
-
-        <h2 class="rem-size">Hello</h2>
-
-        <h2 class="em-size">Hello</h2>
-
+    <header class="header">
+<h1 class="title"> FAVORITE ALBUMS</h1>
+    </header>
+<div class="boxes">
+    <div class="box1row1">
+        <img class="album-1" src="https://people.com/thmb/bnv58OSnUSsOsnwP_c9f85fBdv0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():focal(992x0:994x2)/taylor-swift7-2000-48f9bfb372c34e36866773b1ede0b372.jpg" alt="album 1">
+        <h2 class="album 1">reputation
+            <br>
+            by Taylor Swift
+        </h2>
     </div>
+</div>
+<div class="box2row1">
+    <img class="album-2" src="https://upload.wikimedia.org/wikipedia/en/1/1a/Lana_Del_Rey_-_Lust_for_Life.png" alt="album 2">
+    <h2 class="album">Lust for Life
+        <br>
+        by Lana Del Rey
+    </h2>
+</div>
+    
 </body>
 
 </html>
